@@ -1,3 +1,14 @@
+Thu Sep  4 17:44:40 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* dir.c (glob_helper): use #ifdef instead of #if.
+	  gcc's -Wundef option shows warning for undefined macro.
+
+	* numeric.c (flo_is_finite_p): ditto.
+
+	* vm_dump.c (rb_vmdebug_thread_dump_state): ditto.
+
+	* vm_core.h: define VM_DEBUG_VERIFY_METHOD_CACHE to 0.
+
 Thu Sep  4 03:57:46 2014  Eric Wong  <e@80x24.org>
 
 	* man/ruby.1: spelling fix ("bellow" => "below") [ci-skip]
